tests/sumo/errors/traffic_lights/initial_phase_longer/errors.sumo
Warning: Unused states in tlLogic '0', program '0' in phase 0 after tl-index 11
